infrastructure/monitoring/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cloudflare
  name: monitoring
  namespace: monitoring
spec:
  rules:
  - host: monitoring.oxide.one
    http:
      paths:
      - pathType: Prefix
        path: /grafana/
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - pathType: Prefix
        path: /prometheus/
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
      - pathType: Prefix
        path: /alertmanager/
        backend:
          service:
            name: alertmanager-main
            port:
              number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - monitoring.oxide.one
    secretName: monitoring-ingress
